kubernetes/apps/home/homepage/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  annotations:
    gatus.home-operations.com/endpoint: |
      group: home
spec:
  hostnames: ["homepage.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
